--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -502,6 +502,7 @@ jpn:
     # bank_name: "Nom de la banque"
     # bank_statement: "Relevé de compte bancaire"
     # bank_statements: "Relevés de compte bancaire"
+    # birth: "Birth"
     # boolean_value: "Valeur booléenne"
     # born_at: "Né(e) le"
     # born_on: "Date de naissance"
@@ -605,6 +606,7 @@ jpn:
     # data: "Données complémentaires"
     # dead_at: "Décédé(e) le"
     # dead_on: "Date de décès"
+    # death: "Death"
     # debit: "Débit"
     # debtor: "Debiteur"
     # decimal: "Decimal"
