--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1299,6 +1299,7 @@ fra:
     modules: "Modules"
     month_period: "%{code} — %{month} %{year}"
     monthly: "Mensuelle"
+    months: "Mois"
     moved_on: "Fait le"
     movement: "Mouvements"
     moves: "Mouvements de stocks"
