Fixes historic helper

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1080,7 +1080,7 @@ arb:
     counts_by_nature: "عدد ونوع السجلات"
     create: "انشاء"
     create_journal: "-- انشاء دفتر يومي --"
-    # created_at_by: "Créé le %{at} par %{by}"
+    # created_at_by: "Créé le %{at} par %{by}."
     created_between: "تم التسجيل بين %{started_on} و %{stopped_on}"
     created_on: "انشأ في"
     credit: "رصيد دائن"
@@ -1871,6 +1871,7 @@ arb:
     unit_price_amount_with_taxes: "PU TTC"
     units_load: "تحميل الوحدات الاساسية المفقودة"
     unknown_condition: "غير معروف نوع الشرط"
+    # unknown_user: "Utilisateur inconnu"
     # unknown_variant: "Variante de produit inconnue"
     unlock: "فتح القفل"
     unpaid: "غير مسدد"
@@ -1887,7 +1888,7 @@ arb:
     up: "يرتفع"
     update: "تعديل"
     update_params: "تعديل البحث"
-    # updated_at_by: "Mis à jour le %{at} par %{by}"
+    # updated_at_by: "Mis à jour le %{at} par %{by}\_:"
     upload: "تحميل الملفات"
     # urea_concentration: "Teneur moyenne en urée"
     # usage: "Utilisation"
@@ -1954,7 +1955,9 @@ arb:
       # one: " %{count} évènement de type %{nature} d’une durée de %{duration} minutes"
       # other: " %{count} évènements de type %{nature} pour une durée totale de %{duration} minutes"
       # zero: " Aucun événement de type %{nature}"
+    # x_has_been_cleared: "%{x} a été effacé (anciennement %{a})"
     # x_has_been_updated_from_a_to_b: "%{x} a été mis à jour de %{a} à %{b}"
+    # x_has_been_updated_to_a: "%{x} a été mis à jour avec %{a}"
     x_incoming_payments:
       one: "دفعة واحدة"
       other: "%{count} دفعات اخرى"
