--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -952,7 +952,7 @@ eng:
     counts_by_nature: "Number of documents to account per type"
     create: "Create"
     create_journal: "-- Create journal --"
-    # created_at_by: "Créé le %{at} par %{by}"
+    # created_at_by: "Créé le %{at} par %{by}."
     created_between: "Created between %{started_on} and %{stopped_on}"
     created_on: "Created on"
     credit: "Credit"
@@ -1634,6 +1634,7 @@ eng:
     # unit_price_amount_with_taxes: "PU TTC"
     # units_load: "Charger les unités de base manquantes"
     unknown_condition: "Unknown condition"
+    # unknown_user: "Utilisateur inconnu"
     # unknown_variant: "Variante de produit inconnue"
     unlock: "Unlock"
     unpaid: "Unpaid"
@@ -1650,7 +1651,7 @@ eng:
     up: "Up"
     update: "Update"
     update_params: "Update params"
-    # updated_at_by: "Mis à jour le %{at} par %{by}"
+    # updated_at_by: "Mis à jour le %{at} par %{by}\_:"
     upload: "Upload"
     # urea_concentration: "Teneur moyenne en urée"
     usage: "Usage"
@@ -1714,7 +1715,9 @@ eng:
       one: "One event %{nature} for a total duration of %{duration} minutes"
       other: "%{count} events %{nature} for a total duration of %{duration} minutes"
       zero: "No events %{nature}"
+    # x_has_been_cleared: "%{x} a été effacé (anciennement %{a})"
     # x_has_been_updated_from_a_to_b: "%{x} a été mis à jour de %{a} à %{b}"
+    # x_has_been_updated_to_a: "%{x} a été mis à jour avec %{a}"
     x_incoming_payments:
       one: "%{count} incoming payment"
       other: "%{count} incoming payments"
