--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -888,7 +888,7 @@ jpn:
     # counts_by_nature: "Nombre de pièces à comptabiliser par type"
     create: "創造する"
     # create_journal: "— Créer le journal —"
-    # created_at_by: "Créé le %{at} par %{by}"
+    # created_at_by: "Créé le %{at} par %{by}."
     # created_between: "Enregistré entre le %{started_on} et le %{stopped_on}"
     # created_on: "Créée le"
     # credit: "Crédit"
@@ -1557,6 +1557,7 @@ jpn:
     # unit_price_amount_with_taxes: "PU TTC"
     # units_load: "Charger les unités de base manquantes"
     # unknown_condition: "Type de condition inconnue"
+    # unknown_user: "Utilisateur inconnu"
     # unknown_variant: "Variante de produit inconnue"
     # unlock: "Déverrouiller"
     # unpaid: "Impayées"
@@ -1573,7 +1574,7 @@ jpn:
     # up: "Monter"
     # update: "Modifier"
     # update_params: "Modifier la recherche"
-    # updated_at_by: "Mis à jour le %{at} par %{by}"
+    # updated_at_by: "Mis à jour le %{at} par %{by}\_:"
     # upload: "Téléversement"
     # urea_concentration: "Teneur moyenne en urée"
     # usage: "Utilisation"
@@ -1636,7 +1637,9 @@ jpn:
       # one: " %{count} évènement de type %{nature} d’une durée de %{duration} minutes"
       # other: " %{count} évènements de type %{nature} pour une durée totale de %{duration} minutes"
       # zero: " Aucun événement de type %{nature}"
+    # x_has_been_cleared: "%{x} a été effacé (anciennement %{a})"
     # x_has_been_updated_from_a_to_b: "%{x} a été mis à jour de %{a} à %{b}"
+    # x_has_been_updated_to_a: "%{x} a été mis à jour avec %{a}"
     x_incoming_payments:
       # one: "%{count} encaissement"
       # other: "%{count} encaissements"
