--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -988,7 +988,7 @@ spa:
     counts_by_nature: "Nombre de piezas a contabilizar por tipo"
     # create: "Créer"
     create_journal: "-- Crear el periodico --"
-    # created_at_by: "Créé le %{at} par %{by}"
+    # created_at_by: "Créé le %{at} par %{by}."
     # created_between: "Enregistré entre le %{started_on} et le %{stopped_on}"
     # created_on: "Créée le"
     credit: "Credito"
@@ -1685,6 +1685,7 @@ spa:
     unit_price_amount_with_taxes: "PU TTC"
     units_load: "Cargar las unidades de base que falten"
     # unknown_condition: "Type de condition inconnue"
+    # unknown_user: "Utilisateur inconnu"
     # unknown_variant: "Variante de produit inconnue"
     # unlock: "Déverrouiller"
     # unpaid: "Impayées"
@@ -1701,7 +1702,7 @@ spa:
     # up: "Monter"
     # update: "Modifier"
     # update_params: "Modifier la recherche"
-    # updated_at_by: "Mis à jour le %{at} par %{by}"
+    # updated_at_by: "Mis à jour le %{at} par %{by}\_:"
     upload: "Séleccionar el fichero de salvaguardia a cargar"
     # urea_concentration: "Teneur moyenne en urée"
     # usage: "Utilisation"
@@ -1767,7 +1768,9 @@ spa:
       # one: " %{count} évènement de type %{nature} d’une durée de %{duration} minutes"
       # other: " %{count} évènements de type %{nature} pour une durée totale de %{duration} minutes"
       # zero: " Aucun événement de type %{nature}"
+    # x_has_been_cleared: "%{x} a été effacé (anciennement %{a})"
     # x_has_been_updated_from_a_to_b: "%{x} a été mis à jour de %{a} à %{b}"
+    # x_has_been_updated_to_a: "%{x} a été mis à jour avec %{a}"
     x_incoming_payments:
       # one: "%{count} encaissement"
       # other: "%{count} encaissements"
