--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -126,6 +126,7 @@ jpn:
     backend/cells/last_outgoing_deliveries_cells: #?
     backend/cells/last_procedures_cells: #?
     backend/cells/last_products_cells: #?
+    backend/cells/map_cells: #?
     backend/cells/placeholder_cells: #?
     backend/cells/product_bar_cells: #?
     backend/cells/product_pie_cells: #?
@@ -1228,6 +1229,7 @@ jpn:
       # other: "Nouveau transport pour %{transporter} (%{count} livraisons)"
     # new_value: "Nouvelle valeur"
     # next: "Suivant"
+    # nitrogen_concentration: "Teneur en azote"
     # no_commercial: "— Sans commercial —"
     # no_contacts: "Aucune adresse définie pour %{name}"
     # no_data: "Aucune donnée"
