--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1009,6 +1009,7 @@ fra:
     reception_currency: "Reception currency"
     reception_journal_entry: "Écriture de la réception"
     recipient: "Destinataire"
+    # recommended: "Recommended"
     reconcilable: "Lettrable"
     record_value: "Enregistrement"
     record_value_type: "Type d’enregistrement"
